example/secondfile/objects/CRU_FAN__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CRU- FANS</relationshipLabel>
        <relationshipName>CRU_FANS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRU_FAN_Description__c</fullName>
        <label>CRU FAN Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRU_FAN_Id__c</fullName>
        <label>CRU FAN Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CRU- FAN</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRU_FAN_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRU - FAN - {00000}</displayFormat>
        <label>CRU- FAN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRU- FANS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>